--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
-                        <a href="https://korada-bala-pavani.github.io/Pinterest__clone/" class="lk" target="__blanck">
+                        <a href="https://korada-bala-pavani.github.io/Pinterest__clone/" class="lk" target="__blank">
                             <div class="text">Pinterest Clone</div>
                         </a>
                         </div>
@@ -193,7 +193,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
-                        <a href="https://korada-bala-pavani.github.io/Project1/" class="lk" target="__blanck">
+                        <a href="https://korada-bala-pavani.github.io/Project1/" class="lk" target="__blank">
                             <div class="text">Google Clone</div>
                         </a>
                         </div>
@@ -201,7 +201,7 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-paint-brush"></i>
-                        <a href="https://ai2.appinventor.mit.edu/#4693438766645248" class="lk" target="__blanck">
+                        <a href="https://ai2.appinventor.mit.edu/#4693438766645248" class="lk" target="__blank">
                             <div class="text">MIT APP</div>
                         </a>
                         </div>
